--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -68,12 +68,15 @@
     <Compile Include="Assets\GeneratorEdiorMode.cs" />
     <Compile Include="Assets\Maps\Generation\BaseGenerator.cs" />
     <Compile Include="Assets\Maps\Generation\StandardMapGenerator.cs" />
-    <Compile Include="Assets\Maps\Generation\Strategies\BaseGenerationStrategy.cs" />
-    <Compile Include="Assets\Maps\Generation\Strategies\ReliefGenerationStrategy.cs" />
-    <Compile Include="Assets\Maps\Generation\Strategies\ResourceGenerationStrategy.cs" />
+    <Compile Include="Assets\Maps\Generation\Strategies\Base\ClimatGenerationStrategy.cs" />
+    <Compile Include="Assets\Maps\Generation\Strategies\Base\ReliefGenerationStrategy.cs" />
+    <Compile Include="Assets\Maps\Generation\Strategies\Base\ResourceGenerationStrategy.cs" />
+    <Compile Include="Assets\Maps\Generation\Strategies\Base\TerrainGenerationStrategy.cs" />
+    <Compile Include="Assets\Maps\Generation\Strategies\StandardClimatGenerationStrategy.cs" />
+    <Compile Include="Assets\Maps\Generation\Strategies\StandardReliefGenerationStrategy.cs" />
+    <Compile Include="Assets\Maps\Generation\Strategies\StandardResourceGenerationStrategy.cs" />
     <Compile Include="Assets\Maps\Generation\Strategies\StandardTerrainGenerationStrategy.cs" />
-    <Compile Include="Assets\Maps\Generation\Strategies\StandartTerrainGenerationStrategy.cs" />
-    <Compile Include="Assets\Maps\Generation\Strategies\TerrainGenerationStrategy.cs" />
+    <Compile Include="Assets\Maps\Initialize.cs" />
     <Compile Include="Assets\Maps\Map.cs" />
     <Compile Include="Assets\Maps\MapRenderer.cs" />
     <Compile Include="Assets\Maps\MapSaverLoader.cs" />
