--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -10,8 +10,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <RootNamespace>
-    </RootNamespace>
+    <RootNamespace></RootNamespace>
     <ProjectGuid>{FCAF46A3-F7B2-1D8E-CDA2-ED378E4E41C9}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
@@ -66,6 +65,7 @@
     <Compile Include="Assets\Bases\HexesProp.cs" />
     <Compile Include="Assets\Bases\Placement.cs" />
     <Compile Include="Assets\Maps\Generation\BaseGenerator.cs" />
+    <Compile Include="Assets\Maps\Generation\MapGenerator.cs" />
     <Compile Include="Assets\Maps\Generation\StandardMapGenerator.cs" />
     <Compile Include="Assets\Maps\Generation\Strategies\Base\ClimatGenerationStrategy.cs" />
     <Compile Include="Assets\Maps\Generation\Strategies\Base\ReliefGenerationStrategy.cs" />
